// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default snapshot 1`] = `
CloudFormationStackArtifact {
  "_dependencyIDs": Array [],
  "_deps": Array [],
  "assembly": CloudAssembly {
    "artifacts": Array [
      TreeCloudArtifact {
        "_dependencyIDs": Array [],
        "_deps": Array [],
        "assembly": [Circular],
        "file": "tree.json",
        "id": "Tree",
        "manifest": Object {
          "properties": Object {
            "file": "tree.json",
          },
          "type": "cdk:tree",
        },
        "messages": Array [],
      },
      [Circular],
    ],
    "directory": "/private/var/folders/12/m1_ltd0j325bkd1q2bztlbfr0000gn/T/cdk.outIcnbNs",
    "manifest": Object {
      "artifacts": Object {
        "Tree": Object {
          "properties": Object {
            "file": "tree.json",
          },
          "type": "cdk:tree",
        },
        "test-stack": Object {
          "environment": "aws://unknown-account/unknown-region",
          "metadata": Object {
            "/test-stack": Array [
              Object {
                "data": Object {
                  "artifactHashParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928ArtifactHashC213A0E3",
                  "id": "117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
                  "packaging": "zip",
                  "path": "asset.117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
                  "s3BucketParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3Bucket31EAE6B9",
                  "s3KeyParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3VersionKeyC1BACF01",
                  "sourceHash": "117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
                },
                "trace": Array [
                  "ConstructNode.addMetadata (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/construct-compat.ts:431:92)",
                  "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:163:23)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
                  "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
                  "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
                  "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
                  "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
                  "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:asset",
              },
            ],
            "/test-stack/AssetParameters/117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928/ArtifactHash": Array [
              Object {
                "data": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928ArtifactHashC213A0E3",
                "trace": Array [
                  "new FileAssetParameters (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/private/asset-parameters.ts:26:34)",
                  "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:150:16)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
                  "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
                  "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
                  "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
                  "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
                  "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/AssetParameters/117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928/S3Bucket": Array [
              Object {
                "data": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3Bucket31EAE6B9",
                "trace": Array [
                  "new FileAssetParameters (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/private/asset-parameters.ts:16:32)",
                  "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:150:16)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
                  "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
                  "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
                  "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
                  "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
                  "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/AssetParameters/117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928/S3VersionKey": Array [
              Object {
                "data": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3VersionKeyC1BACF01",
                "trace": Array [
                  "new FileAssetParameters (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/private/asset-parameters.ts:21:31)",
                  "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:150:16)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
                  "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
                  "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
                  "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
                  "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
                  "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/wakeywakey/handler/Resource": Array [
              Object {
                "data": "wakeywakeyhandlerF518780E",
                "trace": Array [
                  "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:600:35)",
                  "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/wakeywakey/handler/ServiceRole/DefaultPolicy/Resource": Array [
              Object {
                "data": "wakeywakeyhandlerServiceRoleDefaultPolicy9C8A61BD",
                "trace": Array [
                  "new Policy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/policy.ts:154:22)",
                  "Role.addToPrincipalPolicy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/role.ts:368:28)",
                  "Role.addToPolicy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/role.ts:376:17)",
                  "NodejsFunction.addToRolePolicy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function-base.ts:263:15)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:44:12)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/wakeywakey/handler/ServiceRole/Resource": Array [
              Object {
                "data": "wakeywakeyhandlerServiceRoleD2A85E64",
                "trace": Array [
                  "new Role (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/role.ts:327:18)",
                  "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:544:31)",
                  "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/wakeywakey/rule/AllowEventRuleteststackwakeywakeyruleBF7CA038": Array [
              Object {
                "data": "wakeywakeyruleAllowEventRuleteststackwakeywakeyruleBF7CA03863EC2B8C",
                "trace": Array [
                  "NodejsFunction.addPermission (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function-base.ts:245:5)",
                  "Object.addLambdaPermission (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events-targets/lib/util.ts:40:13)",
                  "LambdaFunction.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events-targets/lib/lambda.ts:33:5)",
                  "Rule.addTarget (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events/lib/rule.ts:166:32)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:60:10)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/wakeywakey/rule/Resource": Array [
              Object {
                "data": "wakeywakeyruleC7C2157F",
                "trace": Array [
                  "new Rule (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events/lib/rule.ts:130:22)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:56:18)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
          },
          "properties": Object {
            "templateFile": "test-stack.template.json",
          },
          "type": "aws:cloudformation:stack",
        },
      },
      "version": "7.0.0",
    },
    "runtime": Object {
      "libraries": Object {},
    },
    "version": "7.0.0",
  },
  "assets": Array [
    Object {
      "artifactHashParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928ArtifactHashC213A0E3",
      "id": "117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
      "packaging": "zip",
      "path": "asset.117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
      "s3BucketParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3Bucket31EAE6B9",
      "s3KeyParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3VersionKeyC1BACF01",
      "sourceHash": "117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
    },
  ],
  "assumeRoleArn": undefined,
  "cloudFormationExecutionRoleArn": undefined,
  "displayName": "test-stack",
  "environment": Object {
    "account": "unknown-account",
    "name": "aws://unknown-account/unknown-region",
    "region": "unknown-region",
  },
  "id": "test-stack",
  "manifest": Object {
    "environment": "aws://unknown-account/unknown-region",
    "metadata": Object {
      "/test-stack": Array [
        Object {
          "data": Object {
            "artifactHashParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928ArtifactHashC213A0E3",
            "id": "117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
            "packaging": "zip",
            "path": "asset.117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
            "s3BucketParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3Bucket31EAE6B9",
            "s3KeyParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3VersionKeyC1BACF01",
            "sourceHash": "117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
          },
          "trace": Array [
            "ConstructNode.addMetadata (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/construct-compat.ts:431:92)",
            "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:163:23)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
            "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
            "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
            "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
            "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
            "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:asset",
        },
      ],
      "/test-stack/AssetParameters/117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928/ArtifactHash": Array [
        Object {
          "data": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928ArtifactHashC213A0E3",
          "trace": Array [
            "new FileAssetParameters (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/private/asset-parameters.ts:26:34)",
            "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:150:16)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
            "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
            "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
            "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
            "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
            "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/AssetParameters/117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928/S3Bucket": Array [
        Object {
          "data": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3Bucket31EAE6B9",
          "trace": Array [
            "new FileAssetParameters (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/private/asset-parameters.ts:16:32)",
            "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:150:16)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
            "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
            "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
            "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
            "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
            "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/AssetParameters/117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928/S3VersionKey": Array [
        Object {
          "data": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3VersionKeyC1BACF01",
          "trace": Array [
            "new FileAssetParameters (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/private/asset-parameters.ts:21:31)",
            "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:150:16)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
            "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
            "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
            "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
            "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
            "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/wakeywakey/handler/Resource": Array [
        Object {
          "data": "wakeywakeyhandlerF518780E",
          "trace": Array [
            "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:600:35)",
            "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/wakeywakey/handler/ServiceRole/DefaultPolicy/Resource": Array [
        Object {
          "data": "wakeywakeyhandlerServiceRoleDefaultPolicy9C8A61BD",
          "trace": Array [
            "new Policy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/policy.ts:154:22)",
            "Role.addToPrincipalPolicy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/role.ts:368:28)",
            "Role.addToPolicy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/role.ts:376:17)",
            "NodejsFunction.addToRolePolicy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function-base.ts:263:15)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:44:12)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/wakeywakey/handler/ServiceRole/Resource": Array [
        Object {
          "data": "wakeywakeyhandlerServiceRoleD2A85E64",
          "trace": Array [
            "new Role (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/role.ts:327:18)",
            "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:544:31)",
            "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/wakeywakey/rule/AllowEventRuleteststackwakeywakeyruleBF7CA038": Array [
        Object {
          "data": "wakeywakeyruleAllowEventRuleteststackwakeywakeyruleBF7CA03863EC2B8C",
          "trace": Array [
            "NodejsFunction.addPermission (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function-base.ts:245:5)",
            "Object.addLambdaPermission (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events-targets/lib/util.ts:40:13)",
            "LambdaFunction.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events-targets/lib/lambda.ts:33:5)",
            "Rule.addTarget (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events/lib/rule.ts:166:32)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:60:10)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/wakeywakey/rule/Resource": Array [
        Object {
          "data": "wakeywakeyruleC7C2157F",
          "trace": Array [
            "new Rule (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events/lib/rule.ts:130:22)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:56:18)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:9:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
    },
    "properties": Object {
      "templateFile": "test-stack.template.json",
    },
    "type": "aws:cloudformation:stack",
  },
  "messages": Array [],
  "name": "test-stack",
  "originalName": "test-stack",
  "parameters": Object {},
  "requiresBootstrapStackVersion": undefined,
  "stackName": "test-stack",
  "stackTemplateAssetObjectUrl": undefined,
  "tags": Object {},
  "templateFile": "test-stack.template.json",
  "terminationProtection": undefined,
}
`;

exports[`overriden cronoptions 1`] = `
CloudFormationStackArtifact {
  "_dependencyIDs": Array [],
  "_deps": Array [],
  "assembly": CloudAssembly {
    "artifacts": Array [
      TreeCloudArtifact {
        "_dependencyIDs": Array [],
        "_deps": Array [],
        "assembly": [Circular],
        "file": "tree.json",
        "id": "Tree",
        "manifest": Object {
          "properties": Object {
            "file": "tree.json",
          },
          "type": "cdk:tree",
        },
        "messages": Array [],
      },
      [Circular],
    ],
    "directory": "/private/var/folders/12/m1_ltd0j325bkd1q2bztlbfr0000gn/T/cdk.out77IjB0",
    "manifest": Object {
      "artifacts": Object {
        "Tree": Object {
          "properties": Object {
            "file": "tree.json",
          },
          "type": "cdk:tree",
        },
        "test-stack": Object {
          "environment": "aws://unknown-account/unknown-region",
          "metadata": Object {
            "/test-stack": Array [
              Object {
                "data": Object {
                  "artifactHashParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928ArtifactHashC213A0E3",
                  "id": "117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
                  "packaging": "zip",
                  "path": "asset.117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
                  "s3BucketParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3Bucket31EAE6B9",
                  "s3KeyParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3VersionKeyC1BACF01",
                  "sourceHash": "117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
                },
                "trace": Array [
                  "ConstructNode.addMetadata (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/construct-compat.ts:431:92)",
                  "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:163:23)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
                  "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
                  "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
                  "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
                  "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
                  "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:asset",
              },
            ],
            "/test-stack/AssetParameters/117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928/ArtifactHash": Array [
              Object {
                "data": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928ArtifactHashC213A0E3",
                "trace": Array [
                  "new FileAssetParameters (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/private/asset-parameters.ts:26:34)",
                  "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:150:16)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
                  "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
                  "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
                  "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
                  "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
                  "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/AssetParameters/117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928/S3Bucket": Array [
              Object {
                "data": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3Bucket31EAE6B9",
                "trace": Array [
                  "new FileAssetParameters (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/private/asset-parameters.ts:16:32)",
                  "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:150:16)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
                  "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
                  "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
                  "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
                  "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
                  "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/AssetParameters/117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928/S3VersionKey": Array [
              Object {
                "data": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3VersionKeyC1BACF01",
                "trace": Array [
                  "new FileAssetParameters (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/private/asset-parameters.ts:21:31)",
                  "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:150:16)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
                  "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
                  "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
                  "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
                  "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
                  "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
                  "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/wakeywakey/handler/Resource": Array [
              Object {
                "data": "wakeywakeyhandlerF518780E",
                "trace": Array [
                  "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:600:35)",
                  "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/wakeywakey/handler/ServiceRole/DefaultPolicy/Resource": Array [
              Object {
                "data": "wakeywakeyhandlerServiceRoleDefaultPolicy9C8A61BD",
                "trace": Array [
                  "new Policy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/policy.ts:154:22)",
                  "Role.addToPrincipalPolicy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/role.ts:368:28)",
                  "Role.addToPolicy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/role.ts:376:17)",
                  "NodejsFunction.addToRolePolicy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function-base.ts:263:15)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:44:12)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/wakeywakey/handler/ServiceRole/Resource": Array [
              Object {
                "data": "wakeywakeyhandlerServiceRoleD2A85E64",
                "trace": Array [
                  "new Role (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/role.ts:327:18)",
                  "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:544:31)",
                  "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/wakeywakey/rule/AllowEventRuleteststackwakeywakeyruleBF7CA038": Array [
              Object {
                "data": "wakeywakeyruleAllowEventRuleteststackwakeywakeyruleBF7CA03863EC2B8C",
                "trace": Array [
                  "NodejsFunction.addPermission (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function-base.ts:245:5)",
                  "Object.addLambdaPermission (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events-targets/lib/util.ts:40:13)",
                  "LambdaFunction.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events-targets/lib/lambda.ts:33:5)",
                  "Rule.addTarget (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events/lib/rule.ts:166:32)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:60:10)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
            "/test-stack/wakeywakey/rule/Resource": Array [
              Object {
                "data": "wakeywakeyruleC7C2157F",
                "trace": Array [
                  "new Rule (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events/lib/rule.ts:130:22)",
                  "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:56:18)",
                  "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
                  "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
                  "new Promise (<anonymous>)",
                  "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
                  "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
                  "processTicksAndRejections (internal/process/task_queues.js:97:5)",
                ],
                "type": "aws:cdk:logicalId",
              },
            ],
          },
          "properties": Object {
            "templateFile": "test-stack.template.json",
          },
          "type": "aws:cloudformation:stack",
        },
      },
      "version": "7.0.0",
    },
    "runtime": Object {
      "libraries": Object {},
    },
    "version": "7.0.0",
  },
  "assets": Array [
    Object {
      "artifactHashParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928ArtifactHashC213A0E3",
      "id": "117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
      "packaging": "zip",
      "path": "asset.117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
      "s3BucketParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3Bucket31EAE6B9",
      "s3KeyParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3VersionKeyC1BACF01",
      "sourceHash": "117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
    },
  ],
  "assumeRoleArn": undefined,
  "cloudFormationExecutionRoleArn": undefined,
  "displayName": "test-stack",
  "environment": Object {
    "account": "unknown-account",
    "name": "aws://unknown-account/unknown-region",
    "region": "unknown-region",
  },
  "id": "test-stack",
  "manifest": Object {
    "environment": "aws://unknown-account/unknown-region",
    "metadata": Object {
      "/test-stack": Array [
        Object {
          "data": Object {
            "artifactHashParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928ArtifactHashC213A0E3",
            "id": "117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
            "packaging": "zip",
            "path": "asset.117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
            "s3BucketParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3Bucket31EAE6B9",
            "s3KeyParameter": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3VersionKeyC1BACF01",
            "sourceHash": "117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928",
          },
          "trace": Array [
            "ConstructNode.addMetadata (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/construct-compat.ts:431:92)",
            "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:163:23)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
            "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
            "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
            "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
            "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
            "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:asset",
        },
      ],
      "/test-stack/AssetParameters/117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928/ArtifactHash": Array [
        Object {
          "data": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928ArtifactHashC213A0E3",
          "trace": Array [
            "new FileAssetParameters (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/private/asset-parameters.ts:26:34)",
            "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:150:16)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
            "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
            "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
            "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
            "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
            "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/AssetParameters/117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928/S3Bucket": Array [
        Object {
          "data": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3Bucket31EAE6B9",
          "trace": Array [
            "new FileAssetParameters (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/private/asset-parameters.ts:16:32)",
            "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:150:16)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
            "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
            "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
            "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
            "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
            "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/AssetParameters/117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928/S3VersionKey": Array [
        Object {
          "data": "AssetParameters117e34c7588eed2fd151ac6122113c134e4c615d569b2ec748cc7fc44e1d4928S3VersionKeyC1BACF01",
          "trace": Array [
            "new FileAssetParameters (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/private/asset-parameters.ts:21:31)",
            "LegacyStackSynthesizer.doAddFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:150:16)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:74:19)",
            "Stack.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack.ts:653:29)",
            "LegacyStackSynthesizer.addFileAsset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/core/lib/stack-synthesizers/legacy.ts:78:25)",
            "new Asset (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-s3-assets/lib/asset.ts:147:40)",
            "AssetCode.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/code.ts:247:20)",
            "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:564:29)",
            "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/wakeywakey/handler/Resource": Array [
        Object {
          "data": "wakeywakeyhandlerF518780E",
          "trace": Array [
            "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:600:35)",
            "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/wakeywakey/handler/ServiceRole/DefaultPolicy/Resource": Array [
        Object {
          "data": "wakeywakeyhandlerServiceRoleDefaultPolicy9C8A61BD",
          "trace": Array [
            "new Policy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/policy.ts:154:22)",
            "Role.addToPrincipalPolicy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/role.ts:368:28)",
            "Role.addToPolicy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/role.ts:376:17)",
            "NodejsFunction.addToRolePolicy (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function-base.ts:263:15)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:44:12)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/wakeywakey/handler/ServiceRole/Resource": Array [
        Object {
          "data": "wakeywakeyhandlerServiceRoleD2A85E64",
          "trace": Array [
            "new Role (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-iam/lib/role.ts:327:18)",
            "new Function (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function.ts:544:31)",
            "new NodejsFunction (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda-nodejs/lib/function.ts:107:5)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:37:20)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/wakeywakey/rule/AllowEventRuleteststackwakeywakeyruleBF7CA038": Array [
        Object {
          "data": "wakeywakeyruleAllowEventRuleteststackwakeywakeyruleBF7CA03863EC2B8C",
          "trace": Array [
            "NodejsFunction.addPermission (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-lambda/lib/function-base.ts:245:5)",
            "Object.addLambdaPermission (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events-targets/lib/util.ts:40:13)",
            "LambdaFunction.bind (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events-targets/lib/lambda.ts:33:5)",
            "Rule.addTarget (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events/lib/rule.ts:166:32)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:60:10)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
      "/test-stack/wakeywakey/rule/Resource": Array [
        Object {
          "data": "wakeywakeyruleC7C2157F",
          "trace": Array [
            "new Rule (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/@aws-cdk/aws-events/lib/rule.ts:130:22)",
            "new WakeyWakey (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/src/wakeywakey.ts:56:18)",
            "Object.<anonymous> (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/test/wakeywakey.test.ts:19:3)",
            "Object.asyncJestTest (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:45:12",
            "new Promise (<anonymous>)",
            "mapper (/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:28:19)",
            "/Users/matthewbonig/projects/cdk-sandbox/wakeywakey/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
            "processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
          "type": "aws:cdk:logicalId",
        },
      ],
    },
    "properties": Object {
      "templateFile": "test-stack.template.json",
    },
    "type": "aws:cloudformation:stack",
  },
  "messages": Array [],
  "name": "test-stack",
  "originalName": "test-stack",
  "parameters": Object {},
  "requiresBootstrapStackVersion": undefined,
  "stackName": "test-stack",
  "stackTemplateAssetObjectUrl": undefined,
  "tags": Object {},
  "templateFile": "test-stack.template.json",
  "terminationProtection": undefined,
}
`;
